--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vitesome",
   "version": "1.3.0",
+  "type": "module",
   "description": "A simple opinionated Vue3 Starter Template with Vite.js",
   "scripts": {
     "dev": "vite --open --host",
@@ -8,29 +9,26 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.12.1",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@iconify-json/ant-design": "^1.1.4",
-    "@iconify-json/logos": "^1.1.19",
-    "@iconify-json/ph": "^1.1.3",
-    "@iconify/iconify": "^3.0.1",
-    "@iconify/json": "^2.1.153",
-    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
+    "@iconify-json/ph": "^1.1.12",
+    "@iconify/vue": "^4.1.1",
+    "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@types/node": "^18.11.16",
-    "@unocss/preset-icons": "^0.47.6",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vueuse/core": "^9.7.0",
+    "@unocss/preset-icons": "^0.59.2",
+    "@unocss/reset": "^0.59.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vueuse/core": "^10.9.0",
     "pathe": "^1.0.0",
-    "typescript": "^4.9.4",
-    "unocss": "^0.47.6",
+    "typescript": "^5.4.5",
+    "unocss": "^0.59.2",
+    "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.1",
-    "vite-plugin-fonts": "^0.7.0",
-    "vite-plugin-purge-icons": "^0.9.2",
-    "vite-svg-loader": "^3.6.0",
-    "vue-tsc": "^1.0.13"
+    "vite": "^5.2.8",
+    "vite-svg-loader": "^5.1.0",
+    "vue-tsc": "^2.0.13"
   }
 }
