--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "4.x",
     "vue": "^3.4.21",
     "vue-i18n": "^9.12.1",
     "vue-router": "^4.3.0"
