--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "4.x",
+    "three": "^0.163.0",
     "vue": "^3.4.21",
     "vue-i18n": "^9.12.1",
     "vue-router": "^4.3.0"
@@ -19,6 +20,7 @@
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@types/node": "^18.11.16",
+    "@types/three": "^0.163.0",
     "@unocss/preset-icons": "^0.59.2",
     "@unocss/reset": "^0.59.2",
     "@vitejs/plugin-vue": "^5.0.4",
